# smash

./: .gitignore  Cargo.toml  LICENSE  README.md  example.smashrc  install.sh
.github/workflows/: release.yml
ml/: test_shell.py  train_smash.py
output/onnx/: config.json  decoder_model.onnx  encoder_model.onnx  generation_config.json
src/: ai.rs  executor.rs  lib.rs  main.rs  parser.rs
tests/: executor_tests.rs  parser_tests.rs
