[package]
name = "smash"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
dirs = "6.0.0"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
reedline = "0.45.0"
tokenizers = { version = "0.22.2", default-features = false, features = ["fancy-regex"] }
